Task_2/security.tf
resource "aws_security_group" "exam_sg" {
  name        = "exam_sg"
  description = "Exam Security group"
  vpc_id      = aws_vpc.exam_vpc.id

  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
  }
  tags = {
    "Name"    = "Exam Security group"
    "Created" = "Terraform"
  }
}
